syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.goldrpc";
option java_outer_classname = "GoldRpcProto";

package goldrpc;

service GoldRpc {
    rpc Call (SyncRequest) returns(SyncResponse) {}
}

message SyncRequest {
    SyncData data= 1;
}

message SyncResponse {
    SyncData data= 1;
}

message SyncData {
    // the sender of data (service name).
    string sender = 1;
    // data source endpoint.
    string endpoint = 2;
    // the timestamp of data generation.
    int64 timestamp = 3;
    // real transfer data in json string format.
    string data = 4;
}